@@ -1,4 +1,8 @@
 
+
+Changes and New Features in 1.7 (2023-05-16):
+        * tsvs/tsvs2 now plot VIMP prob. rather than inclusion prob.  
+
 Changes and New Features in 1.6 (2023-04-29):
         * C++14 is required for this package
 
